--- a/Bezos/src/main/webapp/Login.html
+++ b/Bezos/src/main/webapp/Login.html
@@ -103,7 +103,8 @@
 <body>
     <header>
         <h1>BEZOS</h1>
-        <button class="back-button">BACK</button>
+		<button onclick="window.location.href='Welcome.html'" class="back-button">BACK</button>
+
     </header>
     <div class="flex-container">
         <div class="left">
