added search page

--- a/Bezos/src/main/webapp/Login.html
+++ b/Bezos/src/main/webapp/Login.html
@@ -104,6 +104,7 @@
     <header>
         <h1>BEZOS</h1>
         <button class="back-button">BACK</button>
+        <a href ="Search.html">Search</a>
     </header>
     <div class="flex-container">
         <div class="left">
