added Main page

--- a/Bezos/src/main/webapp/Search.html
+++ b/Bezos/src/main/webapp/Search.html
@@ -15,7 +15,7 @@
 <body>
 	<header>
 		<h1>BEZOS</h1>
-		<button class="back-button" href="Login.html">BACK</button>
+		<button onclick="window.location.href='Main.html'" class="back-button">BACK</button>
 	</header>
 
 	<div class="flex-container">
