--- a/Bezos/src/main/webapp/Login.html
+++ b/Bezos/src/main/webapp/Login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header and Flex Container Example</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
