--- a/Bezos/src/main/webapp/Welcome.html
+++ b/Bezos/src/main/webapp/Welcome.html
@@ -113,7 +113,10 @@
         <div class="right">
             <a href="Login.html" class="button1">Login</a>
     		<a href="Signup.html" class="button2">Sign Up</a>
+    		<a href="Main.html" style="padding: 50px;">Skip</a>
+    		
         </div>
+        
     </div>
 </body>
 </html>
