fixed bid item page

--- a/Bezos/src/main/webapp/Search.html
+++ b/Bezos/src/main/webapp/Search.html
@@ -132,7 +132,7 @@
 	                "&currentPrice=" + encodeURIComponent(currentPrice) +
 	                "&auctionType=" + encodeURIComponent(auctionType) +
 	                "&remainingTime=" + encodeURIComponent(remainingTime) +
-	                "&description=" + encodeURIComponent(description); +
+	                "&description=" + encodeURIComponent(description) +
 	                "&shipping=" + encodeURIComponent(shipping);
 	        } else {
 	            alert("Please select a row before clicking BID.");
