added back button

--- a/Bezos/src/main/webapp/item.html
+++ b/Bezos/src/main/webapp/item.html
@@ -35,6 +35,7 @@
 		<h1>BEZOS</h1>
 		<!-- Add an element to display the username -->
 		<p id="usernameDisplay"></p>
+		<button onclick="window.location.href='Search.html'" class="back-button">BACK</button>
 	</header>
 
 	<div class="flex-container">
