--- a/Bezos/src/main/webapp/Welcome.html
+++ b/Bezos/src/main/webapp/Welcome.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header and Flex Container Example</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&display=swap" rel="stylesheet">
-    <title>Welcome to Bezos</title>
+    <title>Welcome</title>
     <style>
         body {
             margin: 0;
