--- a/Bezos/src/main/webapp/Search.html
+++ b/Bezos/src/main/webapp/Search.html
@@ -83,6 +83,9 @@ function startCountdown() {
 function updateForwardRemainingTime() {
     var table = document.getElementById("myTable");
     var rows = table.getElementsByTagName("tr");
+    
+    var allRowsExpired = true;
+
 
      for (var i = 1; i < rows.length; i++) {  
         var row = rows[i];
@@ -93,7 +96,7 @@ function updateForwardRemainingTime() {
          if (auctionType.innerText.trim().toLowerCase() === "forward") {
             var remainingTime = parseFloat(remainingTimeCell.innerText);
 
-            remainingTime *= 0.95;
+            remainingTime *= 0.15;
 
             remainingTimeCell.innerText = remainingTime.toFixed(2);
 
@@ -102,10 +105,17 @@ function updateForwardRemainingTime() {
 
                 selectBox.checked = false;
                 selectBox.disabled = true;
+            }else {
+                // If at least one row has not expired, set allRowsExpired to false
+                allRowsExpired = false;
             }
         } 
     }
+    if (allRowsExpired) {
+        window.location.href = "AuctionEnded.jsp";
+    }
 }
+
 
 function updateDutchValue() {
     var table = document.getElementById("myTable");
