--- a/Bezos/src/main/webapp/AuctionEnd.html
+++ b/Bezos/src/main/webapp/AuctionEnd.html
@@ -16,7 +16,7 @@
 
 	<header>
 		<h1>BEZOS</h1>
-		<button onclick="window.location.href='item.html'" class="back-button">BACK</button>
+		<button onclick="window.location.href='Search.html'" class="back-button">BACK</button>
 	</header>
 	<div class="container">
 		<h2>BIDDING ENDED!</h2>
